Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17357

Client can use incorrect sec flavor when MGT is relocated

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      In case the MGT is moved to a secondary location, it might take time for the client to connect and retrieve the config logs. Under some circumstances, we can end up in a situation where the client tries to connect to the other targets (MDT, OST) before having retrieved the sptlrpc logs. As a consequence, the client does not use the required security flavor, and mount fails.

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: