lustre/include/obd_class.h
@@ -278,7 +278,8 @@ struct config_llog_data {
 	enum mgs_cfg_type	    cld_type;
 	unsigned int		    cld_stopping:1, /* we were told to stop
 						     * watching */
-				    cld_lostlock:1; /* lock not requeued */
+				    cld_lostlock:1, /* lock not requeued */
+				    cld_processed:1;  /* successfully fetched */
 	char			    cld_logname[0];
 };
 
